Changed some styling

--- a/statistics.html
+++ b/statistics.html
@@ -44,7 +44,7 @@ body {
                         <p>Crimes in
                             <span class="location" id='placename'> (searching ...)</span>
                              during the past month, <span class="location data-crimemonth">---</span>. 
-              <div id="crimeGraph"> Loading crime data... </div>
+              <div id="crimeGraph"> <span class="location">(Loading crime data...)</span> </div>
     <div id="navWrapper">
             <a href="/"><div class="navButton">
                 Back to Home Page
