--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@ body {
 }
 
 -->
+
+p {padding: 8px;
+	font-family: Arial, Helvetica, sans-serif;}
+
 </style>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
@@ -39,7 +43,7 @@ body {
 		<td>
 			<table width="288" height="242" border="0" background="images/index_04.png" cellspacing="0" cellpadding="0">
 			  <tr>
-			    <td>&nbsp; <p>In
+			    <td>&nbsp; <p class="contentWrapper">In
                     <span class="location" id='placename'> (searching ...)</span>
                     during <span class="location data-crimemonth">---</span>, there have been
                     <span class="location" id='crimecount'><b>(searching ...)</b></span>
