--- a/statistics.html
+++ b/statistics.html
@@ -3,9 +3,10 @@
 <title>CrimeViewer UK - YRS2012</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
-<!--
+
 body {
 	background-image: url(images/bg.jpg);
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .location {
@@ -14,9 +15,9 @@ body {
     font-style: italic;
 }
 
--->
+
 p {padding: 8px;
-	font-family: Arial, Helvetica, sans-serif;}
+	}
 
 </style>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
