Changed from in to near

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ p {padding: 8px;
 		<td>
 			<table width="288" height="242" border="0" background="images/index_04.png" cellspacing="0" cellpadding="0">
 			  <tr>
-			    <td>&nbsp; <p class="contentWrapper">In
+			    <td>&nbsp; <p class="contentWrapper">Near
                     <span class="location" id='placename'> (searching ...)</span>
                     during <span class="location data-crimemonth">---</span>, there have been
                     <span class="location" id='crimecount'><b>(searching ...)</b></span>
